--- a/Model Fitting/Modeling Hidden Collision_exp2.ipynb
+++ b/Model Fitting/Modeling Hidden Collision_exp2.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 6,
    "id": "2b9d5a06",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "import itertools\n",
     "# logging.basicConfig(level=logging.DEBUG,\n",
     "#                     format='%(asctime)s - %(levelname)s - %(message)s')\n",
-    "logging.disable(logging.CRITICAL)\n",
+    "# logging.disable(logging.CRITICAL)\n",
     "from scipy.special import expit\n",
     "\n",
     "\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "49268d47",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "id": "509ed35c",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "id": "b6739e91",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "id": "899c1026",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "id": "27ad994f",
    "metadata": {},
    "outputs": [],
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "1adbbd45",
    "metadata": {},
    "outputs": [],
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "id": "71c356ea",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "0ef78e14",
    "metadata": {},
    "outputs": [],
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 16,
    "id": "72ae197d",
    "metadata": {},
    "outputs": [],
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 17,
    "id": "c04bb52c",
    "metadata": {},
    "outputs": [],
@@ -949,11 +949,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "965d64d0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# update 5/30/2025: final logistic regression should be using the difference between final similarity and initial (prob) similarity\n",
     "def simulate_decision_trial_exp2(trial, params, df_all, ball_Xs, x_blue_range, exitPoints_single, stopSignal, return_raw=False, debug=False):\n",
     "    \"\"\"\n",
     "    Simulate a single trial for Experiment 2.\n",
@@ -1023,21 +1024,24 @@
     "        if len(result['ep_history']) == 0:\n",
     "            raise ValueError(\"No EP history recorded; check simulation output.\")\n",
     "        final_similarity = result['ep_history'][-1]\n",
+    "        init_similarity = result['ep_history'][0]\n",
     "    elif stopSignal == 'pathSim':\n",
     "    # Assume the final similarity measure is the last element in sol_fd_history.\n",
     "        if len(result['fd_history']) == 0:\n",
     "            raise ValueError(\"No FD history recorded; check simulation output.\")\n",
     "        final_similarity = result['fd_history'][-1]\n",
+    "        init_similarity = result['fd_history'][0]\n",
     "    else:\n",
     "        print(f\"Error in retrieving final similarity.\")\n",
     "\n",
     "    if return_raw:\n",
     "        if debug:\n",
     "            print(f\"Trial {stimulus_idx}: raw final dissimilarity = {final_similarity}\")\n",
-    "        return final_similarity, result\n",
+    "        return init_similarity, final_similarity, result\n",
     "    else:\n",
     "        # Map the final similarity to a probability of 'Yes'\n",
-    "        p_yes = logistic_prob(final_similarity, tau, k)\n",
+    "        # should be final - init, tho not used here\n",
+    "        p_yes = logistic_prob(final_similarity-init_similarity, tau, k)\n",
     "        \n",
     "        # if debug:\n",
     "        if debug:\n",
